Upgrade to libbeat 7.12.1
- libbeat 7.12.1
- Update event publishing

--- a/glide.yaml
+++ b/glide.yaml
@@ -3,7 +3,7 @@ import:
 - package: github.com/elastic/beats
   # This guid  refs a 5.0.0_SNAPSHOT -- let's use a semantic version instead
   #version: d8ca37efa8888ce624e2cfaa90107e79fd41be1e
-  version: ~5.5.2
+  version: v7.12
   subpackages:
   - libbeat/beat
   - libbeat/cfgfile
